[package]
name = "render_as_tree"
version = "0.2.1"
authors = ["Hazel Bachrach <bachrach.hazel@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Library for visualizing tree data structures via text"
homepage = "https://github.com/hibachrach/render_as_tree"
repository = "https://github.com/hibachrach/render_as_tree"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
